sistemazioni stili e rimozione warning